<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.OpenFragment">


        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:tabGravity="fill"
            app:tabMode="fixed"
            app:tabSelectedTextColor="@android:color/holo_orange_light"
            app:tabTextColor="@android:color/white">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_item_popular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popular" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_item_now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/now" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_item_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top_rated" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_item_upcoming"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upcoming" />
        </com.google.android.material.tabs.TabLayout>

        <FrameLayout
            android:id="@+id/frag_movie"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>
</layout>