<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="detail"
            type="com.narara.android_movie_app.models.Result" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical"
        tools:context=".ui.DetailFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/image_view_poster"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_margin="16dp"
                    android:scaleType="centerCrop"
                    app:loadImage="@{detail.poster_path}"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/text_view_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@{detail.title}"
                    android:textSize="30sp"
                    tools:text="@string/title" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <CheckBox
                        android:id="@+id/favorite_check"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:button="@drawable/selector_favorite" />

                    <ImageButton
                        android:id="@+id/button_share"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:background="@android:color/transparent"
                        android:src="@drawable/ic_share_white_24dp"
                        android:tint="@color/colorAccent" />
                </LinearLayout>


                <TextView
                    android:id="@+id/text_view_release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@{detail.release_date}"
                    android:textSize="18sp"
                    tools:text="@string/release_date" />


                <TextView
                    android:id="@+id/text_view_overview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@{detail.overview}"
                    android:textSize="16sp"
                    tools:text="@string/story" />
            </LinearLayout>


        </ScrollView>

    </LinearLayout>

</layout>